; ModuleID = '/home/carl/AnghaBench/linux/drivers/power/supply/extr_cpcap-battery.c_cpcap_battery_full.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/power/supply/extr_cpcap-battery.c_cpcap_battery_full.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cpcap_battery_ddata = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }
%struct.cpcap_battery_state_data = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.cpcap_battery_ddata*)* @cpcap_battery_full to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cpcap_battery_full(%struct.cpcap_battery_ddata* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.cpcap_battery_ddata*, align 8
  %4 = alloca %struct.cpcap_battery_state_data*, align 8
  store %struct.cpcap_battery_ddata* %0, %struct.cpcap_battery_ddata** %3, align 8
  %5 = load %struct.cpcap_battery_ddata*, %struct.cpcap_battery_ddata** %3, align 8
  %6 = call %struct.cpcap_battery_state_data* @cpcap_battery_latest(%struct.cpcap_battery_ddata* %5)
  store %struct.cpcap_battery_state_data* %6, %struct.cpcap_battery_state_data** %4, align 8
  %7 = load %struct.cpcap_battery_state_data*, %struct.cpcap_battery_state_data** %4, align 8
  %8 = getelementptr inbounds %struct.cpcap_battery_state_data, %struct.cpcap_battery_state_data* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load %struct.cpcap_battery_ddata*, %struct.cpcap_battery_ddata** %3, align 8
  %11 = getelementptr inbounds %struct.cpcap_battery_ddata, %struct.cpcap_battery_ddata* %10, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = sub nsw i32 %14, 4000
  %16 = icmp sge i32 %9, %15
  br i1 %16, label %17, label %18

17:                                               ; preds = %1
  store i32 1, i32* %2, align 4
  br label %19

18:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %19

19:                                               ; preds = %18, %17
  %20 = load i32, i32* %2, align 4
  ret i32 %20
}

declare dso_local %struct.cpcap_battery_state_data* @cpcap_battery_latest(%struct.cpcap_battery_ddata*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
